Rubocopのルールを変更

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -9,3 +9,10 @@ require:
   - rubocop-rspec
   - rubocop-factory_bot
   - rubocop-capybara
+
+RSpec/MultipleExpectations:
+  Max: 5
+
+RSpec/ExampleLength:
+  Exclude:
+    - spec/system/*
